# F_Brain

./: .gitignore  docker-compose.yml
client/: Dockerfile  package-lock.json  package.json
monitoring/: docker-compose.yml
monitoring/prometheus/: prometheus.yml
proxy/: nginx.conf
server/: Dockerfile  db.sqlite3  pyproject.toml
server/server_conf/: celery.py  settings.py  urls.py
