[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Maria29-b",email = "belaidimaria29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "django-prometheus (>=2.3.1,<3.0.0)",
    "celery (>=5.5.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
